Omnibox: Show visible URL while navigating away from NTP

This was broken recently by crrev.com/800931.

Bug: 792401
Change-Id: Idd269b49bd282a7faa6ca13a259f60384b2b5a08